@@ -54,8 +54,8 @@ make install \
 %{_mandir}/man8/*
 
 %changelog
-* Sun Jan 06 2008 - dgilbert at interlog dot com
-- xxxxxxxxxxxxxxx
+* Tue Oct 14 2008 - dgilbert at interlog dot com
+- make sgv4 includes more robust for lk 2.6.27
   * smp_utils-0.94
 * Sun Jan 06 2008 - dgilbert at interlog dot com
 - sync with sas2r13, add 'sgv4' interface
